Ajustes tokens botao

--- a/core/src/components/button/med/med-button-secondary.scss
+++ b/core/src/components/button/med/med-button-secondary.scss
@@ -1,12 +1,39 @@
 :host([secondary]) {
+--padding: #{$med-spacing-squish-base};
+
+--background: transparent;
+--background-hover: #{$med-color-brand-primary-medium};
+--background-disabled: #{$med-color-neutral-light-20};
+--background-activated: #{$med-color-brand-primary-dark};
+--background-focused: #{$med-color-brand-primary-medium};
+
+--color: #{$med-color-brand-primary-light};
+--color-disable: #{$med-color-neutral-light-20};
+--color-activated: #{$med-color-brand-primary-dark};
+--color-hover: #{$med-color-brand-primary-medium};
+--color-focused: #{$med-color-brand-primary-medium};
+
+--border-radius: #{$med-border-radius-pill};
+--border-color: #{$med-color-brand-primary-light};
+--border-width: #{$med-border-width-thin};
+--border-color-disabled: #{$med-color-neutral-light-20};
+--border-color-focused: #{$med-color-brand-primary-medium};
+--border-color-activated: #{$med-color-brand-primary-dark};
+--border-color-hover: #{$med-color-brand-primary-medium};
+
+--font-size: #{$med-font-size-xxs};
+--font-weight: #{$med-font-weight-semibold};
+--line-height: #{$med-line-height-compressed};
+--color: #{$med-color-brand-primary-light};
+--text-transform: uppercase;
+--transition: all 300ms ease-out;
+--overflow: hidden;
 
   .button-native {
     width: calc(100% - 4px);
     border-style: solid;
-    border-color: var(--med-border-color);
-    border-width: var(--med-border-width);
-    background: transparent;
-    color: var(--med-color-secondary);
+    border-color: var(--border-color);
+    border-width: var(--border-width);
 
     &::before {
       background: transparent;
@@ -17,22 +44,22 @@
 // disabled
 :host([secondary][disabled]) {
   .button-native {
-    border-color: var(--med-background-disabled);
-    color: var(--med-background-disabled);
+    border-color: var(--border-color-disabled);
+    color: var(--color-disable);
   }
 }
 
 // activated
 :host([secondary].ion-activated) .button-native {
-  border-color: var(--med-background-activated);
-  color: var(--med-background-activated);
+  border-color: var(--border-color-activated);
+  color: var(--color-activated);
 }
 
 // focused
 :host([secondary].ion-focused) {
   .button-native {
-    border-color: var(--med-background-focused);
-    color: var(--med-background-focused);
+    border-color: var(--border-color-focused);
+    color: var(--color-focused);
   }
 }
 
@@ -40,8 +67,8 @@
 @media (any-hover: hover) {
   :host([secondary]:hover) {
     .button-native {
-      border-color: var(--med-background-hover);
-      color: var(--med-background-hover);
+      border-color: var(--border-color-hover);
+      color: var(--color-hover);
     }
 
     .button-native::before {
