--- a/core/src/components/button/med/med-button.scss
+++ b/core/src/components/button/med/med-button.scss
@@ -17,17 +17,23 @@
   --font-size: #{$med-font-size-xxs};
   --font-weight: #{$med-font-weight-semibold};
   --line-height: #{$med-line-height-compressed};
-  --color: #{$med-color-neutral-light-prime};
-  --color-tertiary: #{$med-color-neutral-light-prime};
+
   --text-transform: uppercase;
   --transition: all 300ms ease-out;
   --overflow: hidden;
+
+  --color: #{$med-color-neutral-light-prime};
+  --color-disable: var(--color);
+  --color-activated: var(--color);
+  --color-hover: var(--color);
+  --color-focused: var(--color);
 
 
   font-size: var(--font-size);
   font-weight: var(--font-weight);
   text-transform: var(--text-transform);
   color: var(--color);
+
 
   font-family: inherit;
   display: inline-block;
@@ -128,6 +134,10 @@
   cursor: default;
   pointer-events: none;
 
+  .button-native {
+    color: var(--color-disable);
+  }
+
   .button-native::before {
     background: var(--background-disabled);
     opacity: 1;
@@ -135,14 +145,23 @@
 }
 
 // activated
-:host(.ion-activated) .button-native::before {
-  opacity: 1;
-  background: var(--background-activated);
+:host(.ion-activated) {
+  .button-native {
+    color: var(--color-activated);
+  }
+
+  .button-native::before {
+    opacity: 1;
+    background: var(--background-activated);
+  }
 }
+
 
 // focused
 :host(.ion-focused) {
   .button-native {
+    color: var(--color-focused);
+
     &::before {
       background: var(--background-focused);
       opacity: 1;
@@ -154,6 +173,10 @@
 // hover
 @media (any-hover: hover) {
   :host(:hover) {
+    .button-native {
+      color: var(--color-hover);
+    }
+
     .button-native::before {
       opacity: 1;
       background: var(--background-hover);
@@ -161,6 +184,5 @@
   }
 }
 
-@import "./med-button-primary.scss";
 @import "./med-button-secondary.scss";
 @import "./med-button-tertiary.scss";
