--- a/core/src/components/button/med/med-button.scss
+++ b/core/src/components/button/med/med-button.scss
@@ -19,7 +19,7 @@
   --line-height: #{$med-line-height-compressed};
 
   --text-transform: uppercase;
-  --transition: all 300ms ease-out;
+  --transition: background 300ms ease-out;
   --overflow: hidden;
 
   --color: #{$med-color-neutral-light-prime};
@@ -165,7 +165,6 @@
     &::before {
       background: var(--background-focused);
       opacity: 1;
-      transition: var(--transition);
     }
   }
 }
