--- a/core/src/components/button/med/med-button-secondary.scss
+++ b/core/src/components/button/med/med-button-secondary.scss
@@ -26,6 +26,9 @@
 --padding: #{$med-spacing-squish-base};
 --transition: all 300ms ease-out;
 
+--button-ripple-color: #{$med-color-brand-primary-medium};
+--button-ripple-opacity: #{$med-opacity-level-light};
+
   .button-native {
     width: calc(100% - 4px);
     border-style: solid;
@@ -76,5 +79,6 @@
 }
 
 ion-ripple-effect {
-  color: var(--ripple-color);
+  --ripple-color: var(--button-ripple-color);
+  --ripple-opacity: var(--button-ripple-opacity);
 }
