--- a/core/src/components/button/med/med-button.scss
+++ b/core/src/components/button/med/med-button.scss
@@ -1,191 +1,4 @@
-@import "../../../themes/ionic.globals";
-@import "../../../../med-components/variables";
-
-:host {
-  // tokens
-
-  --background: #{$med-color-brand-primary-gradient};
-  --background-hover: #{$med-color-brand-primary-medium};
-  --background-disabled: #{$med-color-neutral-light-20};
-  --background-activated: #{$med-color-brand-primary-dark};
-  --background-focused: #{$med-color-brand-primary-medium};
-
-  --border-radius: #{$med-border-radius-pill};
-
-  --color: #{$med-color-neutral-light-prime};
-  --color-disable: var(--color);
-  --color-activated: var(--color);
-  --color-hover: var(--color);
-  --color-focused: var(--color);
-
-  --font-size: #{$med-font-size-xxs};
-  --font-weight: #{$med-font-weight-semibold};
-  --height: 48px;
-  --line-height: #{$med-line-height-compressed};
-  --padding: #{$med-spacing-squish-lg};
-  --text-transform: uppercase;
-  --transition: background 300ms ease-out;
-  --overflow: hidden;
-
-  --button-ripple-color: #{$med-color-brand-primary-dark};
-  --button-ripple-opacity: #{$med-opacity-level-light};
-
-  font-size: var(--font-size);
-  font-weight: var(--font-weight);
-  text-transform: var(--text-transform);
-  color: var(--color);
-
-  font-family: inherit;
-  display: inline-block;
-  width: auto;
-  text-align: center;
-  text-decoration: none;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  user-select: none;
-  vertical-align: top; // the better option for most scenarios
-  vertical-align: -webkit-baseline-middle; // the best for those that support it
-  pointer-events: auto;
-  font-kerning: none;
-
-  .button-native {
-    @include font-smoothing();
-    @include text-inherit();
-
-    overflow: hidden;
-    display: block;
-    position: relative;
-    width: 100%;
-    outline: none;
-    line-height: 1;
-    contain: layout style;
-    cursor: pointer;
-    z-index: 0;
-    box-sizing: border-box;
-    appearance: none;
-    margin: 0;
-    border: 0;
-
-    height: var(--height);
-    padding: var(--padding);
-    color: var(--color);
-    border-radius: var(--border-radius);
-    background: var(--background);
-
-    &::-moz-focus-inner {
-      border: 0;
-    }
-
-    &::before {
-      @include button-state();
-      background: var(--background);
-      transition: var(--transition);
-      opacity: 1;
-    }
-  }
-
-  .button-inner {
-    display: flex;
-    position: relative;
-    flex-flow: row nowrap;
-    flex-shrink: 0;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-  }
-}
-
-// block
-:host([block]) {
-  display: block;
-
-  .button-native {
-    display: block;
-    width: 100%;
-    clear: both;
-    contain: content;
-    margin-left: 0;
-    margin-right: 0;
-
-    &::before {
-      clear: both;
-    }
-  }
-}
-
-// full
-:host([full]) {
-  display: block;
-
-  .button-native {
-    display: block;
-    width: 100%;
-    contain: content;
-    margin-left: 0;
-    margin-right: 0;
-    border-radius: 0;
-  }
-}
-
-// disabled
-:host([disabled]) {
-  cursor: default;
-  pointer-events: none;
-
-  .button-native {
-    color: var(--color-disable);
-  }
-
-  .button-native::before {
-    background: var(--background-disabled);
-    opacity: 1;
-  }
-}
-
-// activated
-:host(.ion-activated) {
-  .button-native {
-    color: var(--color-activated);
-  }
-
-  .button-native::before {
-    opacity: 1;
-    background: var(--background-activated);
-  }
-}
-
-// focused
-:host(.ion-focused) {
-  .button-native {
-    color: var(--color-focused);
-
-    &::before {
-      background: var(--background-focused);
-      opacity: 1;
-    }
-  }
-}
-
-// hover
-@media (any-hover: hover) {
-  :host(:hover) {
-    .button-native {
-      color: var(--color-hover);
-    }
-
-    .button-native::before {
-      opacity: 1;
-      background: var(--background-hover);
-    }
-  }
-}
-
-ion-ripple-effect {
-  --ripple-color: var(--button-ripple-color);
-  --ripple-opacity: var(--button-ripple-opacity);
-}
-
+@import "./med-button-primary.scss";
 @import "./med-button-secondary.scss";
 @import "./med-button-tertiary.scss";
+@import "./med-button-icon-only.scss";
