--- a/core/src/components/button/med/med-button-secondary.scss
+++ b/core/src/components/button/med/med-button-secondary.scss
@@ -1,13 +1,15 @@
 :host([secondary]) {
   --background: transparent;
-  --background-hover: #{$med-color-brand-primary-medium};
-  --background-disabled: #{$med-color-neutral-light-20};
-  --background-activated: #{$med-color-brand-primary-dark};
-  --background-focused: #{$med-color-brand-primary-medium};
+  --background-hover: transparent;
+  --background-disabled: transparent;
+  --background-activated: transparent;
+  --background-focused: transparent;
 
-  --border-radius: #{$med-border-radius-pill};
   --border-width: #{$med-border-width-thin};
+  --border-style: solid;
   --border-color: #{$med-color-brand-primary-light};
+  --border-radius: #{$med-border-radius-pill};
+
   --border-color-disabled: #{$med-color-neutral-light-20};
   --border-color-focused: #{$med-color-brand-primary-medium};
   --border-color-activated: #{$med-color-brand-primary-dark};
@@ -15,75 +17,20 @@
 
   --color: #{$med-color-brand-primary-light};
   --color-disable: #{$med-color-neutral-light-20};
+  --color-focused: #{$med-color-brand-primary-medium};
   --color-activated: #{$med-color-brand-primary-dark};
   --color-hover: #{$med-color-brand-primary-medium};
-  --color-focused: #{$med-color-brand-primary-medium};
 
   --font-size: #{$med-font-size-xxs};
   --font-weight: #{$med-font-weight-semibold};
   --line-height: #{$med-line-height-compressed};
   --padding: #{$med-spacing-squish-base};
   --transition: all 300ms ease-out;
+  --width: calc(100% - 4px);
 
   --button-ripple-color: #{$med-color-brand-primary-medium};
   --button-ripple-opacity: #{$med-opacity-level-light};
-
-  .button-native {
-    width: calc(100% - 4px);
-    border-style: solid;
-    border-color: var(--border-color);
-    border-width: var(--border-width);
-
-    &::before {
-      background: transparent;
-    }
-  }
 }
-
-//
-// states
-//
-
-// disabled
-:host([secondary][disabled]) {
-  .button-native {
-    border-color: var(--border-color-disabled);
-    color: var(--color-disable);
-  }
-}
-
-// activated
-:host([secondary].ion-activated) .button-native {
-  border-color: var(--border-color-activated);
-  color: var(--color-activated);
-}
-
-// focused
-:host([secondary].ion-focused) {
-  .button-native {
-    border-color: var(--border-color-focused);
-    color: var(--color-focused);
-  }
-}
-
-// hover
-@media (any-hover: hover) {
-  :host([secondary]:hover) {
-    .button-native {
-      border-color: var(--border-color-hover);
-      color: var(--color-hover);
-      transition: var(--transition);
-    }
-
-    .button-native::before {
-      opacity: 1;
-    }
-  }
-}
-
-//
-// ripple
-//
 
 ion-ripple-effect {
   --ripple-color: var(--button-ripple-color);
